// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TransactionData.vue > Should display instructions if there is no ABI 1`] = `
"<div data-v-147565da="">
  <div data-v-147565da="" class="text-right"><a data-v-147565da="">0xb750fb9dd193b...</a>
    <hr data-v-147565da="" class="v-divider v-divider--vertical v-theme--light mx-2" aria-orientation="vertical" role="separator"><a data-v-147565da="">12695880</a>
    <hr data-v-147565da="" class="v-divider v-divider--vertical v-theme--light ml-2" aria-orientation="vertical" role="separator"><button data-v-147565da="" type="button" class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text text-primary"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
      <!----><span class="v-btn__content" data-no-activator=""><i data-v-147565da="" class="mdi-reload mdi v-icon notranslate v-theme--light v-icon--size-small link" aria-hidden="true"></i></span>
      <!---->
      <!---->
    </button>
  </div>
  <!--v-if-->
  <div data-v-147565da="" class="v-row my-2">
    <div data-v-147565da="" class="v-col">
      <h3 data-v-147565da="" class="mb-2">Called Function</h3>
      <transaction-function-call-stub data-v-147565da="" data="0xa9059cbb000000000000000000000000c00e94cb662c3520282e6f5717214004a7f268880000000000000000000000000000000000000000000000000000000000000001" to="0xc00e94cb662c3520282e6f5717214004a7f26888" value="0"></transaction-function-call-stub>
    </div>
  </div>
  <div data-v-147565da="" class="v-row my-2">
    <div data-v-147565da="" class="v-col">
      <h3 data-v-147565da="" class="mb-2">Emitted Events</h3>
      <div data-v-147565da="" class="v-card v-theme--light v-card--density-default v-card--variant-elevated my-2">
        <!---->
        <div class="v-card__loader">
          <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
            <!---->
            <div class="v-progress-linear__background"></div>
            <div class="v-progress-linear__buffer" style="width: 0%;"></div>
            <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
              <div class="v-progress-linear__indeterminate">
                <div class="v-progress-linear__indeterminate long"></div>
                <div class="v-progress-linear__indeterminate short"></div>
              </div>
            </transition-stub>
            <!---->
          </div>
        </div>
        <!---->
        <!---->
        <div data-v-147565da="" class="v-card-text">
          <transaction-event-stub data-v-147565da="" log="[object Object]"></transaction-event-stub>
        </div>
        <!---->
        <!----><span class="v-card__underlay"></span>
      </div>
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`TransactionData.vue > Should display transaction data 1`] = `
"<div data-v-147565da="">
  <div data-v-147565da="" class="text-right"><a data-v-147565da="">0xb750fb9dd193b...</a>
    <hr data-v-147565da="" class="v-divider v-divider--vertical v-theme--light mx-2" aria-orientation="vertical" role="separator"><a data-v-147565da="">12695880</a>
    <hr data-v-147565da="" class="v-divider v-divider--vertical v-theme--light ml-2" aria-orientation="vertical" role="separator"><button data-v-147565da="" type="button" class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text text-primary"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
      <!----><span class="v-btn__content" data-no-activator=""><i data-v-147565da="" class="mdi-reload mdi v-icon notranslate v-theme--light v-icon--size-small link" aria-hidden="true"></i></span>
      <!---->
      <!---->
    </button>
  </div>
  <!--v-if-->
  <div data-v-147565da="" class="v-row my-2">
    <div data-v-147565da="" class="v-col">
      <h3 data-v-147565da="" class="mb-2">Called Function</h3>
      <transaction-function-call-stub data-v-147565da="" data="0xa9059cbb000000000000000000000000c00e94cb662c3520282e6f5717214004a7f268880000000000000000000000000000000000000000000000000000000000000001" to="0xc00e94cb662c3520282e6f5717214004a7f26888" value="0"></transaction-function-call-stub>
    </div>
  </div>
  <div data-v-147565da="" class="v-row my-2">
    <div data-v-147565da="" class="v-col">
      <h3 data-v-147565da="" class="mb-2">Emitted Events</h3>
      <div data-v-147565da="" class="v-card v-theme--light v-card--density-default v-card--variant-elevated my-2">
        <!---->
        <div class="v-card__loader">
          <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
            <!---->
            <div class="v-progress-linear__background"></div>
            <div class="v-progress-linear__buffer" style="width: 0%;"></div>
            <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
              <div class="v-progress-linear__indeterminate">
                <div class="v-progress-linear__indeterminate long"></div>
                <div class="v-progress-linear__indeterminate short"></div>
              </div>
            </transition-stub>
            <!---->
          </div>
        </div>
        <!---->
        <!---->
        <div data-v-147565da="" class="v-card-text">
          <transaction-event-stub data-v-147565da="" log="[object Object]"></transaction-event-stub>
        </div>
        <!---->
        <!----><span class="v-card__underlay"></span>
      </div>
      <nav data-v-147565da="" class="v-pagination v-theme--light" role="navigation" aria-label="Pagination Navigation" data-test="v-pagination-root">
        <ul class="v-pagination__list">
          <!---->
          <li class="v-pagination__prev" data-test="v-pagination-prev"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text" disabled="" aria-label="Previous page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
              <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-chevron-left mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
              <!---->
              <!---->
            </button></li>
          <li class="v-pagination__item v-pagination__item--is-active" data-test="v-pagination-item"><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text" ellipsis="false" aria-current="true" aria-label="Page 1, Current page"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
              <!----><span class="v-btn__content" data-no-activator="">1</span>
              <!---->
              <!---->
            </button></li>
          <li class="v-pagination__item" data-test="v-pagination-item"><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text" ellipsis="false" aria-current="false" aria-label="Go to page 2"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
              <!----><span class="v-btn__content" data-no-activator="">2</span>
              <!---->
              <!---->
            </button></li>
          <li class="v-pagination__item" data-test="v-pagination-item"><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text" ellipsis="false" aria-current="false" aria-label="Go to page 3"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
              <!----><span class="v-btn__content" data-no-activator="">3</span>
              <!---->
              <!---->
            </button></li>
          <li class="v-pagination__item" data-test="v-pagination-item"><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text" ellipsis="false" aria-current="false" aria-label="Go to page 4"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
              <!----><span class="v-btn__content" data-no-activator="">4</span>
              <!---->
              <!---->
            </button></li>
          <li class="v-pagination__item" data-test="v-pagination-item"><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text" ellipsis="false" aria-current="false" aria-label="Go to page 5"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
              <!----><span class="v-btn__content" data-no-activator="">5</span>
              <!---->
              <!---->
            </button></li>
          <li class="v-pagination__item" data-test="v-pagination-item"><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text" ellipsis="false" aria-current="false" aria-label="Go to page 6"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
              <!----><span class="v-btn__content" data-no-activator="">6</span>
              <!---->
              <!---->
            </button></li>
          <li class="v-pagination__item" data-test="v-pagination-item"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text" disabled="" ellipsis="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
              <!----><span class="v-btn__content" data-no-activator="">...</span>
              <!---->
              <!---->
            </button></li>
          <li class="v-pagination__item" data-test="v-pagination-item"><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text" ellipsis="false" aria-current="false" aria-label="Go to page 21"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
              <!----><span class="v-btn__content" data-no-activator="">21</span>
              <!---->
              <!---->
            </button></li>
          <li class="v-pagination__next" data-test="v-pagination-next"><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text" aria-label="Next page" aria-disabled="false"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
              <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-chevron-right mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
              <!---->
              <!---->
            </button></li>
          <!---->
        </ul>
      </nav>
    </div>
  </div>
</div>"
`;
